--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,12 +1,50 @@
-/*
- * ------------------------------------------------------------
- * IMPORTANT: The contents of this file are auto-generated.
- *
- * This file may be updated by the Shopify admin theme editor
- * or related systems. Please exercise caution as any changes
- * made to this file may be overwritten.
- * ------------------------------------------------------------
- */
 {
-  "current": {}
+  "current": {
+    "sections": {
+      "header": {
+        "type": "header",
+        "settings": {
+          "menu": "main-menu",
+          "sticky_header": true,
+          "show_search": true
+        }
+      },
+      "footer": {
+        "type": "footer",
+        "settings": {
+          "show_newsletter": true,
+          "newsletter_heading": "Subscribe to our newsletter",
+          "show_social": true,
+          "show_payment_icons": true,
+          "show_powered_by": true
+        }
+      }
+    },
+    "content_for_index": []
+  },
+  "presets": {
+    "Vintner": {
+      "sections": {
+        "header": {
+          "type": "header",
+          "settings": {
+            "menu": "main-menu",
+            "sticky_header": true,
+            "show_search": true
+          }
+        },
+        "footer": {
+          "type": "footer",
+          "settings": {
+            "show_newsletter": true,
+            "newsletter_heading": "Subscribe to our newsletter",
+            "show_social": true,
+            "show_payment_icons": true,
+            "show_powered_by": true
+          }
+        }
+      },
+      "content_for_index": []
+    }
+  }
 }
